Add neighbourhood control

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>JDA</artifactId>
             <version>3.3.1_290</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.8-dmr</version>
+        </dependency>
+
     </dependencies>
 
 
